# GOAD

./: .gitattributes  .gitignore  404.html  Dockerfile  README.md  Vagrantfile  flake.nix  globalsettings.ini  goad.ini  goad.ps1  goad.py  goad.sh  goad_docker.sh  guacamole.yml  index.html  infracost_test.tf  noansible_requirements.yml  playbooks.yml  pyproject.toml  requirements.yml  requirements_311.yml  sitemap.xml
CRTE-Modular/: design_document.md  user_guide.docx  user_guide.md
ad/: README.md
ansible/: ad-acl.yml  ad-child_domain.yml  ad-data.yml  ad-enroll_linux.yml  ad-gmsa.yml  ad-members.yml  ad-parent_domain.yml  ad-relations.yml  ad-servers.yml  ad-trusts.yml  ad.yml  adcs.yml  ansible.cfg  build.yml  data.yml  debug.yml  dhcp.yml  disable_localuser.yml  disable_nat.yml  disable_vagrant.yml  dpapi.yml  elk.yml  enable_nat.yml  enable_vagrant.yml  exchange.yml  exchangemembership.yml  fix_dns.yml  fix_trust.yml  glpi.yml  hosts  interfaces.yml  keepass.yml  klink.yml  laps.yml  localusers.yml  main.retry  main.yml  onlyusers.yml  ossec.conf  ossec.yml  (+21 more)
changelog/: index.html
developers/: index.html
docs/: diagram.drawio  install_with_aws.md  install_with_azure.md  install_with_cloudru.md  install_with_oci.md  install_with_proxmox.md  install_with_virtualbox.md  install_with_vmware.md  install_with_vmware_Windows.md  install_with_vmware_esxi.md  misc.md  mkdocs.yml  provisioning.md  troubleshoot.md
extensions/: index.html
goad/: config.py  dependencies.py  exceptions.py  extension.py  goadpath.py  gui.py  infos.py  instance.py  instances.py  labs.py  (+8 more)
(+1018 files in other folders)
